--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -80,6 +80,7 @@
 </body>
 <script>
     function register() {
+        var roleId = 3;
         var userName = $("#userName").val();
         var newPassword = $("#newPassword").val()
         var confirmPassword = $("#confirmPassword").val();
@@ -110,6 +111,7 @@
             url: "/login/register",
             type: "POST",
             data: {
+                roleId: roleId,
                 userName: userName,
                 newPassword: newPassword,
                 sex: sex,
